# Memo-server

./: '  .gitignore  .gitmodules  CmakeLists.txt  LICENSE  README.md  compile  compile_flags.txt  index.html  run  setup
docs/grammar/memory/request/: memoCreate.yaml  memoDelete.yaml  memoSearch-ids.yaml  memoSearch-tags.yaml  memoSearch.yaml  memoUpdate.yaml
docs/grammar/memory/response/: memoCreateRS_v1_0.yaml  memoDeleteRS_v1_0.yaml  memoSearchRs_v1_0.yaml  memoUpdateRS_v1_0.yaml
docs/grammar/tag/request/: tagCreate.yaml  tagDelete.yaml  tagSearch-memos.yaml  tagSearch.yaml  tagUpdate.yaml
docs/grammar/tag/response/: tagCreateRS_v1_0.yaml  tagDeleteRS_v1_0.yaml  tagSearchRs_v1_0.yaml  tagUpdateRS_v1_0.yaml
scripts/: compile  setup
src/: CMakeLists.txt  client.cpp  main.cpp
src/db/: IDatabase.hpp  ISqlite3Wrapper.hpp  SqLiteDatabase.cpp  SqLiteDatabase.hpp  Sqlite3Database.cpp  Sqlite3Database.hpp  Sqlite3Functions.cpp  Sqlite3Functions.hpp  Sqlite3Schema.cpp  Sqlite3Schema.hpp  Sqlite3Wrapper.cpp  Tools.cpp  Tools.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  easylogging++.cc  logger.hpp
src/memo/: Connection.cpp  Connection.hpp  Header.hpp  Reply.cpp  Reply.hpp  Request.hpp  Resources.cpp  Resources.hpp  Server.cpp  Server.hpp  Transaction.cpp  Transaction.hpp
src/memo/manager/: ConnectionManager.cpp  ConnectionManager.hpp
src/memo/service/: BaseProcess.hpp  BaseService.cpp  BaseService.hpp  IProcess.hpp  IService.hpp  MemoService.cpp  MemoService.hpp  Process.hpp  Service.hpp  TagService.cpp  TagService.hpp
src/memo/service/memo/: MemoSvc.cpp  MemoSvc.hpp
src/memo/service/memo/process/: BaseProcess.hpp  CreateProcess.cpp  CreateProcess.hpp  DeleteProcess.cpp  DeleteProcess.hpp  SearchByIdProcess.cpp  SearchByIdProcess.hpp  SearchProcess.cpp  SearchProcess.hpp  UpdateProcess.cpp  UpdateProcess.hpp
src/memo/service/process/: AddMemoProcess.cpp  AddMemoProcess.hpp  AddTagProcess.cpp  AddTagProcess.hpp  ListMemosProcess.cpp  ListMemosProcess.hpp  ListTagsProcess.cpp  ListTagsProcess.hpp
src/memo/service/tag/: TagSvc.cpp  TagSvc.hpp
src/memo/service/tag/process/: CreateProcess.cpp  CreateProcess.hpp  DeleteProcess.cpp  DeleteProcess.hpp  SearchProcess.cpp  SearchProcess.hpp  UpdateProcess.cpp  UpdateProcess.hpp
src/memo/tools/: Receptor.cpp  Receptor.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp  Tools.cpp  Tools.hpp
src/model/: Color.cpp  Color.hpp  Memo.cpp  Memo.hpp  ModelDefs.hpp  Tag.cpp  Tag.hpp
src/model/proto/: Memo.proto  MemoSvc.proto  Memory.proto  OperationStatus.proto  Tag.proto  TagSvc.proto
src/server/: Resources.cpp  Resources.hpp  Server.cpp  Server.hpp
src/server/process/: AddMemoProcess.cpp  AddMemoProcess.hpp  AddTagProcess.cpp  AddTagProcess.hpp  BaseProcess.hpp  ListMemosProcess.cpp  ListMemosProcess.hpp  ListTagsProcess.cpp  ListTagsProcess.hpp  RemoveMemoProcess.cpp  RemoveMemoProcess.hpp  RemoveTagProcess.cpp  RemoveTagProcess.hpp  UpdateMemoProcess.cpp  UpdateMemoProcess.hpp  UpdateTagProcess.cpp  UpdateTagProcess.hpp
src/server/service/: BaseProcess.hpp  BaseService.cpp  BaseService.hpp  IProcess.hpp  IService.hpp  MemoService.cpp  MemoService.hpp  TagService.cpp  TagService.hpp
src/server/service/memo/: MemoSvc.cpp  MemoSvc.hpp
src/server/service/memo/process/: CreateProcess.cpp  CreateProcess.hpp  DeleteProcess.cpp  DeleteProcess.hpp  SearchByIdProcess.cpp  SearchByIdProcess.hpp  SearchProcess.cpp  SearchProcess.hpp  UpdateProcess.cpp  UpdateProcess.hpp
src/server/service/process/: AddMemoProcess.cpp  AddMemoProcess.hpp  AddTagProcess.cpp  AddTagProcess.hpp  ListMemosProcess.cpp  ListMemosProcess.hpp  ListTagsProcess.cpp  ListTagsProcess.hpp
src/server/service/tag/: TagSvc.cpp  TagSvc.hpp
src/server/service/tag/process/: CreateProcess.cpp  CreateProcess.hpp  DeleteProcess.cpp  DeleteProcess.hpp  SearchProcess.cpp  SearchProcess.hpp  UpdateProcess.cpp  UpdateProcess.hpp
tests/: CMakeLists.txt  ModelTestHelperFunctions.cpp  ModelTestHelperFunctions.hpp  TestingUtils.cpp  TestingUtils.hpp  Utils.cpp  Utils.hpp  main.cpp
tests/db/: Sqlite3TestHelperFunctions.cpp  Sqlite3TestHelperFunctions.hpp  TestSQLiteDatabase.inl  TestSqlite3Database.inl  TestSqlite3Functions.inl  TestSqlite3Wrapper.inl  TestTools.inl
tests/test_files/: temp__.db
